--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div id="selectedTagsArea"></div>
 
         <div id="advancedSearchArea">
+
             <div class="tagArea">
                 <button type="button" class="inputBtn inputBtn_ingr" id="ingredientsBtn">
                     Ingrédients
@@ -31,7 +32,7 @@
                 <!-- <div class="inputBox"></div> -->
                 <input type="search" id="ingredientsInput" list="ingredientsList" class="tagInput"
                     placeholder="Ingrédients">
-                <i class="fa-solid fa-chevron-up"></i>
+                <i class="fa-solid fa-chevron-up" id="ingredientsChevron"></i>
                 <!-- <i class="fa-solid fa-chevron-up"></i> -->
                 <ul id="ingredientsBox" class="tagsBox"></ul>
             </div>
@@ -42,7 +43,7 @@
                     <i class="fa-solid fa-chevron-down"></i>
                 </button>
                 <input type="search" id="applianceInput" list="applianceList" class="tagInput" placeholder="Appareils">
-                <i class="fa-solid fa-chevron-up"></i>
+                <i class="fa-solid fa-chevron-up" id="applianceChevron"></i>
                 <!-- <i class="fa-solid fa-chevron-up"></i> -->
                 <ul id="applianceBox" class="tagsBox"></ul>
             </div>
@@ -53,7 +54,7 @@
                     <i class="fa-solid fa-chevron-down"></i>
                 </button>
                 <input type="search" id="ustensilsInput" list="ustensilsList" class="tagInput" placeholder="Ustensiles">
-                <i class="fa-solid fa-chevron-up"></i>
+                <i class="fa-solid fa-chevron-up" id="ustensilsChevron"></i>
                 <!-- <i class="fa-solid fa-chevron-up"></i> -->
                 <ul id="ustensilsBox" class="tagsBox"></ul>
             </div>
@@ -68,7 +69,7 @@
     </main>
 
     <script src="./scripts/recipes.js"></script>
-    <script src="./scripts/recipesFactory.js"></script>
+    <script src="./scripts/factory.js"></script>
     <script src="./scripts/index.js"></script>
 </body>
 
