--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </main>
 
     <script src="./scripts/recipes.js"></script>
-    <script src="./scripts/recipesFactory.js"></script>
+    <script src="./scripts/factory.js"></script>
     <script src="./scripts/index.js"></script>
 </body>
 
