v1 boucles natives finalisée

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <i class="fa-solid fa-chevron-down"></i>
                 </button>
                 <!-- <div class="inputBox"></div> -->
-                <input type="search" id="ingredientsInput" list="ingredientsList" class="tagInput"
-                    placeholder="Ingrédients">
+                <input type="search" id="ingredientsInput" class="tagInput" placeholder="Ingrédients">
+                <!-- <input type="search" id="ingredientsInput" list="ingredientsList" class="tagInput" placeholder="Ingrédients"> -->
                 <i class="fa-solid fa-chevron-up" id="ingredientsChevron"></i>
                 <!-- <i class="fa-solid fa-chevron-up"></i> -->
                 <ul id="ingredientsBox" class="tagsBox"></ul>
@@ -42,7 +42,8 @@
                     Appareils
                     <i class="fa-solid fa-chevron-down"></i>
                 </button>
-                <input type="search" id="applianceInput" list="applianceList" class="tagInput" placeholder="Appareils">
+                <!-- <input type="search" id="applianceInput" list="applianceList" class="tagInput" placeholder="Appareils"> -->
+                <input type="search" id="applianceInput" class="tagInput" placeholder="Appareils">
                 <i class="fa-solid fa-chevron-up" id="applianceChevron"></i>
                 <!-- <i class="fa-solid fa-chevron-up"></i> -->
                 <ul id="applianceBox" class="tagsBox"></ul>
@@ -53,7 +54,8 @@
                     Ustensiles
                     <i class="fa-solid fa-chevron-down"></i>
                 </button>
-                <input type="search" id="ustensilsInput" list="ustensilsList" class="tagInput" placeholder="Ustensiles">
+                <!-- <input type="search" id="ustensilsInput" list="ustensilsList" class="tagInput" placeholder="Ustensiles"> -->
+                <input type="search" id="ustensilsInput" class="tagInput" placeholder="Ustensiles">
                 <i class="fa-solid fa-chevron-up" id="ustensilsChevron"></i>
                 <!-- <i class="fa-solid fa-chevron-up"></i> -->
                 <ul id="ustensilsBox" class="tagsBox"></ul>
